--- a/client/src/styles/layout/home.css
+++ b/client/src/styles/layout/home.css
@@ -149,8 +149,12 @@ section .portfolio-item .tile-centre {
   display: flex;
   flex-direction: column;
   flex: wrap;
+  gap: 1rem;
   justify-content: center;
   padding: 2rem;
+  & h3 {
+    margin-bottom: 0.5rem;
+  }
 }
 
 section .portfolio-item .tile-right {
@@ -168,7 +172,13 @@ section .portfolio-item .tile-left {
 }
 
 section .portfolio-item .tile-vertical {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   padding: 2rem;
+  & h3 {
+    margin-bottom: 0.5rem;
+  }
 }
 
 section .portfolio-item #image-container {
